--- a/config.yaml
+++ b/config.yaml
@@ -190,9 +190,9 @@ hub:
       # c.Spawner.default_url = "/lab"
       # c.KubeSpawner.default_url = "/lab"
       # c.KubeSpawner.working_dir = ".."
-      c.KubeSpawner.cmd = "jupyterhub-singleuser --ip=0.0.0.0"
+      # c.KubeSpawner.cmd = "jupyterhub-singleuser --ip=0.0.0.0"
       # c.KubeSpawner.args = ["--allow-root"]
-      # c.KubeSpawner.args = ["--default-url=/lab" "--allow-root"]
+      c.KubeSpawner.args = ["--default-url=/lab" "--allow-root"]
       # c.KubeSpawner.args = ["--allow-root", "--collaborative=True"]
       import os, nativeauthenticator
       c.JupyterHub.template_paths = [f"{os.path.dirname(nativeauthenticator.__file__)}/templates/"]
