--- a/config.yaml
+++ b/config.yaml
@@ -188,7 +188,7 @@ hub:
       c.KubeSpawner.allow_privilege_escalation = True
       # c.Spawner.notebook_dir = ".."
       # c.Spawner.default_url = "/lab"
-      c.KubeSpawner.default_url = /user/{username}/lab
+      c.KubeSpawner.default_url = "/user/{username}/lab"
       # c.KubeSpawner.working_dir = ".."
       # c.KubeSpawner.cmd = "jupyterhub-singleuser --ip=0.0.0.0"
       c.KubeSpawner.args = ["--allow-root"]
