--- a/config.yaml
+++ b/config.yaml
@@ -197,8 +197,8 @@ hub:
       # c.KubeSpawner.default_url = "/user/{username}/lab"
       # c.KubeSpawner.working_dir = ".."
       # c.KubeSpawner.cmd = "jupyterhub-singleuser --ip=0.0.0.0"
-      # c.KubeSpawner.args = ["--allow-root"]
-      c.KubeSpawner.args = ["--default-url='/lab'" "--allow-root"]
+      c.KubeSpawner.args = ["--allow-root"]
+      # c.KubeSpawner.args = ["--default-url='/lab'" "--allow-root"]
       # c.KubeSpawner.args = ["--allow-root", "--collaborative=True"]
       import os, nativeauthenticator
       c.JupyterHub.template_paths = [f"{os.path.dirname(nativeauthenticator.__file__)}/templates/"]
