--- a/config.yaml
+++ b/config.yaml
@@ -168,19 +168,18 @@ hub:
         # }
 
       # old format for usergroups (JupyterHub < 3.2)
-      {
-        "brineylab": [
-            "bryan",
-            "jonathan",
-            "pragati",
-            "terrence",
-            "sarah",
-            "sean",
-            "morgan",
-            "benjamin",
-          ],
-        "external": ["bryan"],
-      }
+      "brineylab":
+        [
+          "bryan",
+          "jonathan",
+          "pragati",
+          "terrence",
+          "sarah",
+          "sean",
+          "morgan",
+          "benjamin",
+        ]
+      "external": ["bryan"]
 
       # load_roles: [
       # {
