--- a/config.yaml
+++ b/config.yaml
@@ -14,8 +14,8 @@ cull:
   enabled: false
 
 singleuser:
-  # cmd: null
-  defaultUrl: "/lab"
+  cmd: null
+  defaultUrl: ...
 
   # networking
   # for some reason, notebook server spawning fails if networkPolicy is set to true
@@ -34,7 +34,7 @@ singleuser:
   extraEnv:
     GRANT_SUDO: "yes"
     # DOCKER_STACKS_JUPYTER_CMD: lab
-    JUPYTERHUB_SINGLEUSER_APP: "jupyter_server.serverapp.ServerApp"
+    JUPYTERHUB_SINGLEUSER_APP: "..."
   uid: 0
   fsGid: 0
 
