update config to mount references folder

--- a/config.yaml
+++ b/config.yaml
@@ -123,10 +123,14 @@ singleuser:
       - name: nfs-avon-nextseq2k
         persistentVolumeClaim:
           claimName: nfs-avon-nextseq2k
+      # references
+      - name: nfs-propjoe-references
+        persistentVolumeClaim:
+          claimName: nfs-propjoe-references
       # shared data
-      # - name: nfs-propjoe-shared
-      #   persistentVolumeClaim:
-      #     claimName: nfs-propjoe-shared
+      - name: nfs-propjoe-shared
+        persistentVolumeClaim:
+          claimName: nfs-propjoe-shared
       # - name: nfs-stringer-shared
       #   persistentVolumeClaim:
       #     claimName: nfs-stringer-shared
@@ -135,8 +139,10 @@ singleuser:
         mountPath: /home/jovyan/sequencing_runs/novaseq
       - name: nfs-avon-nextseq2k
         mountPath: /home/jovyan/sequencing_runs/nextseq
-      # - name: nfs-propjoe-shared
-      #   mountPath: /home/jovyan/shared
+      - name: nfs-propjoe-shared
+        mountPath: /home/jovyan/shared
+      - name: nfs-propjoe-references
+        mountPath: /home/jovyan/references
       # - name: nfs-stringer-shared
       #   mountPath: /home/jovyan/shared
 
