--- a/config.yaml
+++ b/config.yaml
@@ -41,12 +41,12 @@ singleuser:
   # default image
   image:
     name: brineylab/jupyterhub-datascience
-    tag: v2023-08-08
+    tag: v2023-09-12
 
   # alternate profiles (images)
   profileList:
     - display_name: "data science"
-      description: "default brineylab data analysis environment, including interpreters for Python, R, and Julia<br>  - jupyterlab: v3.6.5<br>  - abstar: v0.6.0<br>  - abutils: v0.4.2<br>  - scab: v0.1.0"
+      description: "default brineylab data analysis environment, including interpreters for Python, R, and Julia <br> v2023-09-12"
       default: true
       kubespawner_override:
         lifecycle_hooks:
@@ -58,9 +58,9 @@ singleuser:
                 - >
                   mkdir -p ${HOME}/codeserver;
     - display_name: "deep learning"
-      description: "extends the data science environment to include GPU-enabled torch and 🤗 libraries, as well as some deep learning-specific JupyterLab extensions"
+      description: "extends the data science environment to include GPU-enabled torch and 🤗 libraries, as well as some deep learning-specific JupyterLab extensions <br> v2023-09-12"
       kubespawner_override:
-        image: brineylab/jupyterhub-deeplearning:v2023-08-08
+        image: brineylab/jupyterhub-deeplearning:v2023-09-12
         # extra_resource_limits:
         #   nvidia.com/gpu: "1"
         lifecycle_hooks:
@@ -162,6 +162,7 @@ hub:
         - sean
         - morgan
         - benjamin
+        - nathan
       # admin_access: true
     JupyterHub:
       authenticator_class: "nativeauthenticator.NativeAuthenticator"
