--- a/config.yaml
+++ b/config.yaml
@@ -9,9 +9,9 @@
 # Available chart versions: https://jupyterhub.github.io/helm-chart/
 #
 
-prePuller:
-  hook:
-    enabled: false
+# prePuller:
+#   hook:
+#     enabled: false
 
 # disable user and server culling
 cull:
@@ -58,12 +58,12 @@ singleuser:
   # default image
   image:
     name: brineylab/jupyterhub-datascience
-    tag: v2023-09-12
+    tag: v2023-11-02
 
   # alternate profiles (images)
   profileList:
     - display_name: "data science"
-      description: "default brineylab data analysis environment, including interpreters for Python, R, and Julia <br> v2023-09-12"
+      description: "default brineylab data analysis environment, including interpreters for Python, R, and Julia <br> v2023-11-02"
       default: true
       kubespawner_override:
         lifecycle_hooks:
@@ -75,7 +75,7 @@ singleuser:
                 - >
                   mkdir -p ${HOME}/codeserver;
     - display_name: "deep learning"
-      description: "extends the data science environment to include GPU-enabled torch and 🤗 libraries, as well as some deep learning-specific JupyterLab extensions <br> v2023-09-12"
+      description: "extends the data science environment to include GPU-enabled torch and 🤗 libraries, as well as some deep learning-specific JupyterLab extensions <br> v2023-11-02"
       kubespawner_override:
         image: brineylab/jupyterhub-deeplearning:v2023-09-12
         # extra_resource_limits:
@@ -88,30 +88,30 @@ singleuser:
                 - "-c"
                 - >
                   mkdir -p ${HOME}/codeserver;
-    - display_name: "BETA: data science"
-      description: "data science image (for testing purposes) <br> v2023-11-02"
-      kubespawner_override:
-        image: brineylab/jupyterhub-datascience:v2023-11-02
-        lifecycle_hooks:
-          postStart:
-            exec:
-              command:
-                - "sh"
-                - "-c"
-                - >
-                  mkdir -p ${HOME}/codeserver;
-    - display_name: "BETA: deep learning"
-      description: "deep learning image (for testing purposes) <br> v2023-11-02"
-      kubespawner_override:
-        image: brineylab/jupyterhub-deeplearning:v2023-11-02
-        lifecycle_hooks:
-          postStart:
-            exec:
-              command:
-                - "sh"
-                - "-c"
-                - >
-                  mkdir -p ${HOME}/codeserver;
+    # - display_name: "BETA: data science"
+    #   description: "data science image (for testing purposes) <br> v2023-11-02"
+    #   kubespawner_override:
+    #     image: brineylab/jupyterhub-datascience:v2023-11-02
+    #     lifecycle_hooks:
+    #       postStart:
+    #         exec:
+    #           command:
+    #             - "sh"
+    #             - "-c"
+    #             - >
+    #               mkdir -p ${HOME}/codeserver;
+    # - display_name: "BETA: deep learning"
+    #   description: "deep learning image (for testing purposes) <br> v2023-11-02"
+    #   kubespawner_override:
+    #     image: brineylab/jupyterhub-deeplearning:v2023-11-02
+    #     lifecycle_hooks:
+    #       postStart:
+    #         exec:
+    #           command:
+    #             - "sh"
+    #             - "-c"
+    #             - >
+    #               mkdir -p ${HOME}/codeserver;
 
   # storage
   storage:
