--- a/config.yaml
+++ b/config.yaml
@@ -195,6 +195,7 @@ hub:
         - karenna
         - daniella
         - praneeth
+        - collin
       # admin_access: true
     JupyterHub:
       authenticator_class: "nativeauthenticator.NativeAuthenticator"
