--- a/config.yaml
+++ b/config.yaml
@@ -72,12 +72,12 @@ singleuser:
   # default image
   image:
     name: brineylab/jupyterhub-datascience
-    tag: v2023-12-19
+    tag: v2024-02-21
 
   # alternate profiles (images)
   profileList:
     - display_name: "data science"
-      description: "default brineylab data analysis environment, including interpreters for Python and R as well as VS Code <br> v2023-12-19"
+      description: "default brineylab data analysis environment, including interpreters for Python and R as well as VS Code <br> v2024-02-21"
       default: true
       kubespawner_override:
         lifecycle_hooks:
@@ -89,9 +89,9 @@ singleuser:
                 - >
                   mkdir -p ${HOME}/codeserver;
     - display_name: "deep learning"
-      description: "extends the data science environment to include torch and 🤗 libraries, as well as some deep learning-specific JupyterLab extensions <br> v2023-12-19"
+      description: "extends the data science environment to include torch and 🤗 libraries, as well as some deep learning-specific JupyterLab extensions <br> v2024-02-21"
       kubespawner_override:
-        image: brineylab/jupyterhub-deeplearning:v2023-12-19
+        image: brineylab/jupyterhub-deeplearning:v2024-02-21
         # extra_resource_limits:
         #   nvidia.com/gpu: "1"
         lifecycle_hooks:
@@ -102,30 +102,30 @@ singleuser:
                 - "-c"
                 - >
                   mkdir -p ${HOME}/codeserver;
-    - display_name: "BETA: data science"
-      description: "data science image (for testing purposes) <br> v2024-02-21"
-      kubespawner_override:
-        image: brineylab/jupyterhub-datascience:v2024-02-21
-        lifecycle_hooks:
-          postStart:
-            exec:
-              command:
-                - "sh"
-                - "-c"
-                - >
-                  mkdir -p ${HOME}/codeserver;
-    - display_name: "BETA: deep learning"
-      description: "deep learning image (for testing purposes) <br> v2024-02-21"
-      kubespawner_override:
-        image: brineylab/jupyterhub-deeplearning:v2024-02-21
-        lifecycle_hooks:
-          postStart:
-            exec:
-              command:
-                - "sh"
-                - "-c"
-                - >
-                  mkdir -p ${HOME}/codeserver;
+    # - display_name: "BETA: data science"
+    #   description: "data science image (for testing purposes) <br> v2024-02-21"
+    #   kubespawner_override:
+    #     image: brineylab/jupyterhub-datascience:v2024-02-21
+    #     lifecycle_hooks:
+    #       postStart:
+    #         exec:
+    #           command:
+    #             - "sh"
+    #             - "-c"
+    #             - >
+    #               mkdir -p ${HOME}/codeserver;
+    # - display_name: "BETA: deep learning"
+    #   description: "deep learning image (for testing purposes) <br> v2024-02-21"
+    #   kubespawner_override:
+    #     image: brineylab/jupyterhub-deeplearning:v2024-02-21
+    #     lifecycle_hooks:
+    #       postStart:
+    #         exec:
+    #           command:
+    #             - "sh"
+    #             - "-c"
+    #             - >
+    #               mkdir -p ${HOME}/codeserver;
 
   # storage
   storage:
